--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint-staged": "^5.0.0",
     "prettier": "^1.8.2",
     "react": "^16.1.1",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
+    "react-paginate": "^5.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
