--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-paginate": "^5.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-select": "^1.0.0-rc.10"
   },
   "scripts": {
     "start": "react-scripts start",
